secuirty_group.tf
resource "aws_security_group" "jmeter" {
  name        = "jmeter-sg"
  description = "Allow inbound traffic for Jmeter"
  vpc_id      = var.vpc_id

  ingress {
    description = "port 50000"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = var.cidr_blocks
  }

  ingress {
    description = "port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.cidr_blocks
  }

  ingress {
    description = "port 22"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.cidr_blocks
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "jmeter-sg"
  }
}
